Modified APIs for S_LCA
